Final tweaks - fixed alignment on shop.html page.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -66,3 +66,7 @@ body {
 .active a {
   text-decoration: underline;
 }
+
+.cars-container {
+  padding-left: 0;
+}
